AGOVA-57 Get rid of Commons Codec Removed dependency Pom minor rework Javadoc correction